<resources>
    <string name="app_name">GB_HW1</string>
    <string name="button_to_task2">Sign up</string>
    <string name="please_enter_your_name">Name</string>
    <string name="please_enter_your_login">Login</string>
    <string name="profile">User profile</string>
    <string name="enter_your_phone_number">Phone number</string>
    <string name="please_enter_the_following_information">Please enter the following information:</string>
    <string name="password">Password</string>
    <string name="id_number">ID number</string>
    <string name="email">Email</string>
    <string name="postal_address">Postal address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="testing_my_first_application">My first application</string>
</resources>